cmake_minimum_required (VERSION 2.6)
project (mysqlcsv)
SET (VERSION 0.15)
SET(CMAKE_C_FLAGS "-O2 ${CMAKE_C_FLAGS}")
SET(CMAKE_INSTALL_PREFIX  CACHE STRING ${BUILDTYPE_DOCSTRING} FORCE)
SET(MYSQL_INCLUDE_DIR "" CACHE STRING  "mysql include directory")
SET(MYSQL_LIB_DIR /usr/include CACHE STRING  "mysql library directory")
SET(PCRE_INCLUDE_DIR "" CACHE PATH "pcre include directory")
SET(PCRE_LIB_DIR "" CACHE PATH "pcre library directory")
SET(ZLIB_INCLUDE_DIR "" CACHE PATH "zlib include directory")
SET(ZLIB_LIB_DIR "" CACHE PATH "zlib library directory")

INCLUDE_DIRECTORIES(.)
 
SET(COMMON_LIST 
	common.c
        )
SET(MYSQLCSV_LIST
	mysqlcsv.c
	)
 
ADD_LIBRARY(common SHARED ${COMMON_LIST})
ADD_LIBRARY(common_static STATIC ${COMMON_LIST})
SET_TARGET_PROPERTIES(common_static PROPERTIES OUTPUT_NAME "common")

SET_TARGET_PROPERTIES(common PROPERTIES VERSION ${VERSION} SOVERSION 1) 

INCLUDE_DIRECTORIES(. ${MYSQL_INCLUDE_DIR} ${PCRE_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR})
LINK_DIRECTORIES(. ${MYSQL_LIB_DIR} ${PCRE_LIB_DIR} ${ZLIB_LIB_DIR})
ADD_EXECUTABLE(mysqlcsv ${MYSQLCSV_LIST})
TARGET_LINK_LIBRARIES(mysqlcsv common_static mysqlclient pcre z)
 
INSTALL(TARGETS mysqlcsv DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
INSTALL(TARGETS common DESTINATION ${CMAKE_INSTALL_PREFIX}/) 
 
